test/bad/loops/for18.px

for x in true...false step true do
    skip
